use gradle-plugin for tests